--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Created by https://www.gitignore.io/api/node,visualstudiocode
+
+### Node ###
 # Logs
 logs
 *.log
@@ -57,3 +60,15 @@ typings/
 # dotenv environment variables file
 .env
 
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history
+
+
+
+# End of https://www.gitignore.io/api/node,visualstudiocode
