--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "qnamakerbot",
   "version": "1.0.0",
   "description": "meu primeiro chatbot",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +11,8 @@
   "dependencies": {
     "botbuilder": "^3.14.0",
     "botbuilder-cognitiveservices": "^1.1.0",
-    "restify": "^6.3.4"
+    "restify": "^6.3.4",
+    "node": "^9.9.0",
+    "npm": "^5.6.0"
   }
 }
