--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "botbuilder": "^3.14.0",
     "botbuilder-cognitiveservices": "^1.1.0",
     "restify": "^6.3.4",
-    "node": "^9.9.0",
+    "node.js": "^9.9.0",
     "npm": "^5.6.0"
   }
 }
